# QtProjects

./: README.md
Pinger/: CMakeLists.txt  README.md  httpclient.cpp  httpclient.h  main.cpp
Pinger2/: README.md  Tringer.pro  dataparser.cpp  dataparser.h  httpclient.cpp  httpclient.h  main.cpp  sshexecutor.cpp  sshexecutor.h
UniqPointerDemo/: main.cpp  myconsole.pro
super_pinger/: CMakeLists.txt  main.cpp
